src/components/Header.css
.header {
  width: 100%;
  height: 65px;
  position: fixed;
  background-color: var(--color-1-light-33);
  top: 0;
  display: flex;
  align-items: center;
  z-index: 99;
}

.header .title {
  font-size: 1.3em;
  font-weight: bold;
  margin: 0 0.75em 0 1em;
}

.header .link {
  background: none;
  border: none;
  color: inherit;
  font-family: inherit;
  padding: 0 0 0 0;
  text-decoration: none;
  text-transform: lowercase;
  font-size: 1.12em;
  margin-right: 0.75em;
}

.header .link:hover {
  cursor: pointer;
  color: var(--color-1-light);
}

.header .mode-icons {
  margin-left: auto;
  font-size: 1.5em;
  display: flex;
  gap: 0.45em;
  margin-right: 1em;
}

.header .mode-icons .selected {
  border-bottom: 1px solid;
  padding: 0 2px 3px 2px;
  color: var(--color-1-light);
}

.header .mode-icons .icon {
  padding: 0 2px 4px 2px;
}

.header .mode-icons .icon:hover {
  cursor: pointer;
  color: var(--color-1-light);
}

